Implemented new RMIClientHandlerEx for reduce thread consumption.
1, If server occurred disconnect, will retry connect 10 times every 3 seconds, then remove the connection when still not connected.